--- a/src/app/features/cart/_components/wishlist/wishlist.component.html
+++ b/src/app/features/cart/_components/wishlist/wishlist.component.html
@@ -53,31 +53,33 @@
 
         <!-- ✅ Actions -->
         <div class="wishlist-card-footer">
-          <button class="wishlist-remove" title="Remove" (click)="removeFromWishlist(product.id)">
-
+          <!-- Delete -->
+          <button class="icon-btn wishlist-remove" title="Remove" (click)="onRemoveClick(product.id)"
+            [class.animating]="animatingDeleteId === product.id">
             <ng-container *ngIf="removingItemIds.has(product.id!); else removeIcon">
               <div class="spinner mini"></div>
             </ng-container>
             <ng-template #removeIcon>
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <polyline points="3 6 5 6 21 6"></polyline>
-                <path d="M19 6L18 20H6L5 6"></path>
-                <line x1="10" y1="11" x2="10" y2="17"></line>
-                <line x1="14" y1="11" x2="14" y2="17"></line>
-                <path d="M9 6V3h6v3"></path>
-              </svg>
+              <span class="trash">
+                <mat-icon class="trash-can" fontIcon="delete"></mat-icon>
+                <span class="trash-lid"></span>
+              </span>
             </ng-template>
           </button>
 
-          <!-- Move to Cart Button -->
-          <button class="wishlist-cart" title="Move to Cart" (click)="addToCart(product)">
+          <!-- Move to Cart -->
+          <button class="icon-btn wishlist-cart" title="Move to Cart" (click)="addToCart(product)">
             <ng-container *ngIf="movingItemIds.has(product.id!); else cartIcon">
               <div class="spinner mini"></div>
             </ng-container>
-            <ng-template #cartIcon>🛒</ng-template>
+            <ng-template #cartIcon>
+              <span class="emoji-icon" aria-hidden="true">🛒</span>
+            </ng-template>
           </button>
+
         </div>
+
+
       </div>
     </div>
 
