--- a/src/app/features/product/_components/view-product/view-product.component.html
+++ b/src/app/features/product/_components/view-product/view-product.component.html
@@ -39,25 +39,9 @@
         <div class="product-title-row">
           <h1 class="product-title">{{ product()?.name }}</h1>
           <div class="icon-actions">
-            <button mat-icon-button class="heart-btn" type="button" [disabled]="isWishlistUpdating"
-              [class.active]="doesExistsInWishlist()" [attr.aria-pressed]="doesExistsInWishlist()"
-              aria-label="Toggle wishlist"
-              (click)="addToWishlist(product()?.id!)">
-
-              <!-- Single Material icon that toggles outline/fill -->
-              <mat-icon class="heart-icon">
-                {{ doesExistsInWishlist() ? 'favorite' : 'favorite_border' }}
-              </mat-icon>
-
-              <!-- Optional mini loader while API is in-flight -->
-              <div class="spinner mini" *ngIf="isWishlistUpdating"></div>
-
-              <!-- Firecracker burst layer (same structure you already use) -->
-              <div class="burst" *ngIf="showBurst">
-                <i class="spark" *ngFor="let p of particles" [style.--angle]="p.angle" [style.--dist]="p.dist"
-                  [style.--delay.ms]="p.delay" [style.--hue]="p.hue"></i>
-              </div>
-            </button>
+            <app-wishlist-button [active]="isWishlisted()" [busy]="isWishlistUpdating"
+              (toggle)="addToWishlist(product()?.id!)">
+            </app-wishlist-button>
 
 
             <button #shareIconRef mat-icon-button aria-label="Share Product" tooltip="Share"
@@ -156,14 +140,9 @@
       <span>4.1⭐ | (25)</span>
     </div>
     <div class="mobile-actions">
-      <button mat-icon-button aria-label="Wishlist" (click)="addToWishlist(product()?.id!)">
-        <ng-container *ngIf="doesExistsInWishlist(); else notWishlisted">
-          <span title="Already Added">❤️</span>
-        </ng-container>
-        <ng-template #notWishlisted>
-          <span title="Add to Wishlist">🤍</span>
-        </ng-template>
-      </button>
+      <app-wishlist-button [active]="doesExistsInWishlist()" [busy]="isWishlistUpdating"
+        (toggle)="addToWishlist(product()?.id!)">
+      </app-wishlist-button>
 
       <button #mobileShareMenuRef mat-icon-button aria-label="Share" tooltip="Share" (click)="toggleShareMenu()">
         <mat-icon aria-label="Share" title="Share">share</mat-icon>
